# paper_matheron_equals_enkf

./: .doit.db.db  .gitignore  .repomixignore  CLAUDE.md  DAG_ts.drawio  FG_ts.drawio  FG_ts_noisy.drawio  LICENSE  Makefile  README.md  _main_offcuts.tex  bayesnet.tex  bench.csv  diag_utils.py  dodo.py  icml2023.sty  main.py  main.tex  main_numeric.py  main_plot.py  moral_graph_ts.drawio  plot_timing.py  posterior_timing.csv  posterior_timing_raw.csv  preamble.tex  pyproject.toml  pyproject.toml.orig  rebuttal.md  refs.bib  time_bench.py
.github/workflows/: smoke-test.yml
aabi2025proceedings/: aabi2025proceedings.tex  references.bib
da-gp/: README.md  bench.csv  conda-env.yml  pyproject.toml
da-gp/.github/workflows/: ci.yml
da-gp/scripts/: bench.py  plot_perf.py  plot_posterior.py
da-gp/src/: cli.py  gp_common.py  gp_dapper.py  gp_pdaf.py  gp_sklearn.py
da-gp/tests/: test_regression.py  test_rmse.py  test_shapes.py
da_gp/: figstyle.py  logging_setup.py
da_gp/.github/workflows/: ci.yml
da_gp/scripts/: bench.py  plot_perf_combined.py  plot_performance.py  plot_posterior.py  plot_timing.py
da_gp/src/: __init__.py  cli.py  gp_common.py  gp_dapper.py  gp_pdaf.py  gp_sklearn.py
da_gp/tests/: test_grid_size_broadcast.py  test_regression.py  test_rmse.py  test_shapes.py  test_timing_csv.py
sections/: 01_introduction.tex  02_preliminaries.tex  03_problemsetting.tex  04_experiments.tex  05_conclusion.tex  appendix.tex
