[project]
name = "paper-matheron-equals-enkf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "filterpy>=1.4.5",
    "marimo>=0.14.15",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "tueplots>=0.2.1",
]
