[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-matheron-equals-enkf"
version = "0.1.0"
description = "Data Assimilation vs Gaussian Processes benchmark and paper"
authors = [{name = "Dan MacKinlay", email = "dan@mackinlay.net"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scikit-learn",
    "matplotlib",
    "netcdf4",
    "pandas>=2.3.1",
    "dapper>=1.7,<2",
    "tueplots>=0.2.1",
]

[project.optional-dependencies]
jax = ["jax", "jaxlib"]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
da-gp = "da_gp.src.cli:main"
da-gp-bench = "da_gp.scripts.bench:main"
da-gp-plot-perf = "da_gp.scripts.plot_perf_combined:main"  
da-gp-plot-posterior = "da_gp.scripts.plot_posterior:main"
da-gp-plot-timing = "da_gp.scripts.plot_timing:main"

[tool.hatch.build.targets.wheel]
packages = ["da_gp"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "B", "A", "C4", "DTZ", "T10", "EM", "ISC", "ICN", "G", "PIE", "T20", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "PERF", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
