[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "da-gp"
version = "0.1.0"
description = "Data Assimilation vs Gaussian Processes benchmark"
authors = [{name = "Dan MacKinlay", email = "dan@mackinlay.net"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scikit-learn",
    "matplotlib",
    "netcdf4",
]

[project.optional-dependencies]
dapper = ["dapper>=1.0"]
pdaf = ["mpi4py"]  # pyPDAF not available in PyPI
jax = ["jax", "jaxlib"]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
da-gp = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "B", "A", "C4", "DTZ", "T10", "EM", "ISC", "ICN", "G", "PIE", "T20", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "PERF", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true